@startuml
' ============================================================
' Sơ đồ Lớp - Hệ thống Xác thực
' NestJS + Better Auth + Drizzle ORM
' ============================================================

skinparam class {
  BackgroundColor #F8F8F8
  BorderColor #333333
  ArrowColor #333333
  AttributeFontSize 12
}

title Hệ thống Xác thực - Mô hình Domain

skinparam classFontSize 10
skinparam classAttributeFontSize 9
skinparam nodesep 15
skinparam ranksep 15

' --- Các lớp ---
class User {
  - id: UUID
  - name: string
  - email: string
  - phone: string
  - emailVerified: boolean
  - phoneVerified: boolean
  - image: string
  - createdAt: DateTime
  - updatedAt: DateTime
  + hasRole(role: string): boolean
  + isEmailVerified(): boolean
  + isPhoneVerified(): boolean
}

class Session {
  - id: string
  - userId: UUID
  - expiresAt: DateTime
  - token: string
  - ipAddress: string
  - userAgent: string
  - createdAt: DateTime
  - updatedAt: DateTime
  + isExpired(): boolean
  + invalidate(): void
}

class Account {
  - id: string
  - userId: UUID
  - accountId: string
  - providerId: string
  - password: string
  - createdAt: DateTime
  - updatedAt: DateTime
  + verifyPassword(password: string): boolean
  + updatePassword(hashedPassword: string): void
}

class Verification {
  - id: string
  - identifier: string
  - value: string
  - expiresAt: DateTime
  - createdAt: DateTime
  - updatedAt: DateTime
  + isExpired(): boolean
  + verify(input: string): boolean
}

class Role {
  - id: UUID
  - name: string
  - description: string
  - createdAt: DateTime
}

class UserRole {
  - id: UUID
  - userId: UUID
  - roleId: UUID
  - createdAt: DateTime
}

' --- Enum ---
enum Provider {
  CREDENTIAL
  GOOGLE
  GITHUB
}

' --- Mối quan hệ ---
User "1" -- "*" Session : có >
User "1" -- "*" Account : có >
User "1" -- "*" UserRole : được gán >
Role "1" -- "*" UserRole : được cấp cho >
User --> Verification : xác minh qua >
Session --> User : thuộc về >
Account --> User : thuộc về >

@enduml
